--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:3.20.6
 
 RUN apk update
-RUN apk add mariadb mariadb-server
+RUN apk add mariadb mariadb-client bash
 
-COPY ./conf/mariadb_config /etc/my.cnf.d/mariadb_config
-RUN chmod 644 etc/my.cnf.d/mariadb_config
+COPY ./conf/mariadb.conf /etc/my.cnf.d/mariadb.conf
+RUN chmod 644 etc/my.cnf.d/mariadb.conf
 
 COPY ./tools/mariadb-script.sh /usr/local/bin/mariadb-script.sh 
 RUN chmod +x /usr/local/bin/mariadb-script.sh
