--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -5,4 +5,4 @@ socket = /run/mysqld/mysqld.sock
 pid_file = /run/mysqld/mysqld.pid
 bind_address = 0.0.0.0
 port = 3306
-user = mysqluser
+user = mysql
