--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,3 +1,8 @@
+secrets:
+  db_password:
+    file: ../secrets/db_password.txt
+  db_root_password:
+    file: ../secrets/db_root_password.txt
 services:
   nginx:
     build: ./requirements/nginx
@@ -7,6 +12,17 @@ services:
       - "443:443"
     # volumes:
     #   - wordpress_data:/var/www/html:ro
-    # depends_on:
+    depends_on:
     #   - wordpress
-    #   - mariadb
+      - mariadb
+  mariadb:
+    build: ./requirements/mariadb
+    container_name: inceprion_mariadb
+    restart: always
+    ports:
+      - "3306:3306"
+    # volumes:
+    #   - mariadb_data:/var/lib/mysql
+    secrets:
+      - db_password
+      - db_root_password
