--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "3306:3306"
     # volumes:
-    #   - mariadb_data:/var/lib/mysql
+    #   - mariadb_data:/var/lib/mariadb
     secrets:
       - db_password
       - db_root_password
