Building all the containers successfully, accessing the page works

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,26 +1,23 @@
 FROM alpine:3.20.6
 
 RUN apk update
-RUN apk add --no-cache \
+RUN apk add --no-cache mariadb-client \
 	php83 \
 	php83-fpm \
+	php83-phar \
 	php83-mysqli \
 	php83-curl \
-	php83-json \
 	php83-mbstring \
-	php83-xml \
-	php83-zip \
-	php83-gd \
 	curl \
-	bash \
-	tar \
-	less
+	bash
 
-COPY ./conf/wordpress.conf /etc/php83/php-fpm.d/www.conf
+COPY ./conf/www.conf /etc/php83/php-fpm.d/www.conf
 ARG WEB_USER
 ARG WEB_GROUP
 RUN	echo "user = $WEB_USER" >> /etc/php83/php-fpm.d/www.conf
-RUN echo "group = WEB_GROUP" >> /etc/php83/php-fpm.d/www.conf
+RUN echo "group = $WEB_GROUP" >> /etc/php83/php-fpm.d/www.conf
+
+COPY ./conf/mem_override.ini /etc/php83/conf.d/mem_override.ini
 
 COPY ./tools/wordpress-script.sh /bin/wordpress-script.sh
 RUN chmod +x /bin/wordpress-script.sh
@@ -29,6 +26,13 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /bin/wp
 
+RUN mkdir -p /var/www/wp
+RUN mkdir -p /var/www/html
+
+RUN adduser -D -H -s /sbin/nologin -g ${WEB_GROUP} -G ${WEB_GROUP} ${WEB_USER}
+
+EXPOSE 9000
+
 WORKDIR /var/www/html
 
-RUN 
+CMD [ "wordpress-script.sh" ]
