--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,26 +3,93 @@ secrets:
     file: ../secrets/db_password.txt
   db_root_password:
     file: ../secrets/db_root_password.txt
+  wp_user_password:
+    file: ../secrets/wp_user_password.txt
+  wp_root_password:
+    file: ../secrets/wp_root_password.txt
+
+volumes:
+  mariadb_data:
+    name: mariadb
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ~/data/dockervolumes/mariadb
+
+  wordpress_data:
+    name: wordpress
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ~/data/dockervolumes/wordpress
+
+networks:
+  dockernetwork:
+    driver: bridge
+
 services:
   nginx:
-    build: ./requirements/nginx
+    init: true
+    build:
+      context: ./requirements/nginx
+      args:
+        WEB_USER: ${WEB_USER}
+        WEB_GROUP: ${WEB_GROUP}
     container_name: inception_nginx
+    image: nginx
+    pull_policy: build
     restart: always
+    networks:
+      - dockernetwork
     ports:
       - "443:443"
-    # volumes:
-    #   - wordpress_data:/var/www/html:ro
+    volumes:
+      - wordpress_data:/var/www/html
     depends_on:
-    #   - wordpress
+      - wordpress
       - mariadb
   mariadb:
+    init: true
     build: ./requirements/mariadb
-    container_name: inceprion_mariadb
+    container_name: inception_mariadb
+    image: mariadb
+    pull_policy: build
+    env_file:
+      - "./.env"
     restart: always
+    networks:
+      - dockernetwork
     ports:
       - "3306:3306"
-    # volumes:
-    #   - mariadb_data:/var/lib/mariadb
+    volumes:
+      - mariadb_data:/var/lib/mariadb
     secrets:
       - db_password
       - db_root_password
+  wordpress:
+    init: true
+    build: 
+      context: ./requirements/wordpress
+      args:
+         WEB_USER: ${WEB_USER}
+         WEB_GROUP: ${WEB_GROUP}
+    container_name: inception_wordpress
+    image: wordpress
+    pull_policy: build
+    env_file:
+      - "./.env"
+    restart: always
+    networks:
+      - dockernetwork
+    ports:
+      - "9000:9000"
+    depends_on:
+      - mariadb
+    volumes:
+      - wordpress_data:/var/www/html
+    secrets:
+      - db_password
+      - wp_root_password
+      - wp_user_password
