--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,17 @@ http {
 	server_tokens off;
 
 	server {
-		listen 443;
+		listen 80;
+		listen [::]:80;
+		server_name mrahmat-.42.fr;
+
+		return 301 https://$host$request_uri;
+	}
+
+	server {
+		listen *:443 ssl;
+		listen [::]:443 ssl;
+		http2 on;
 		server_name mrahmat-.42.fr;
 
 		root /var/www/html;
@@ -29,6 +39,9 @@ http {
 			fastcgi_pass wordpress:9000;
 			fastcgi_index index.php;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param QUERY_STRING $query_string;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
+			fastcgi_split_path_info ^(.+\.php)(/.*)$;
 		}
 
 		location = /nginx-health {
